<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_baseline_home_24"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_nearby"
            android:icon="@drawable/ic_baseline_location_searching_24"
            android:title="@string/menu_location" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_baseline_info_24"
            android:title="@string/menu_about_us" />

        <item
            android:id="@+id/nav_other"
            android:icon="@drawable/ic_baseline_more_horiz_24"
            android:title="@string/menu_other" />

        <item
            android:id="@+id/nav_log_out"
            android:icon="@drawable/ic_baseline_logout"
            android:title="@string/menu_logout" />
    </group>
</menu>