<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#262627"
    android:padding="30dp"
    tools:context=".RegisterActivity">

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/editEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:singleLine="true"
        android:textColor="@color/white"
        android:textColorHint="#9A9595"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/editLogin"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed"
        tools:layout_editor_absoluteX="20dp" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/editLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:hint="@string/login_"
        android:singleLine="true"
        android:textColor="@color/white"
        android:textColorHint="#9A9595"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/editPass"
        app:layout_constraintTop_toBottomOf="@+id/editEmail"
        app:layout_constraintVertical_chainStyle="packed"
        tools:layout_editor_absoluteX="20dp" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/editPass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:singleLine="true"
        android:textColor="@color/white"
        android:textColorHint="#9A9595"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/btnRegister"
        app:layout_constraintTop_toBottomOf="@+id/editLogin"
        tools:layout_editor_absoluteX="20dp" />

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="36dp"
        android:padding="15dp"
        android:singleLine="true"
        android:text="@string/register"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>